--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
   crossorigin="anonymous"></script>
 <script>
     $(function () {
-        var socket = io('http://localhost:3000');
+        var socket = io();
         $('form').submit(function(){
             socket.emit('chat message', $('#m').val());
             $('#m').val('');
