better design, small fixes, some refactoring

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,15 @@
     <title>simple-chat</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
+  <div class="topbar">
+    <div class="title"><h3 style="position: relative; left: -50%;">simple-chat</h3></div>
+  </div>
   <body>
     <div id="messageWindow">
       <ul id="messages"></ul>
     </div>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" />
     </form>
   </body>
 </html>
