--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>simple-chat</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <meta name="viewport" content="width=device-width">
   </head>
   <div class="topbar">
     <div class="title"><h3 style="position: relative; left: -50%;">simple-chat</h3></div>
